# projektC-

./: CMakeLists.txt  circle.cpp  circle.h  line.cpp  line.h  main.cpp  moc_paintwidget.cpp  paintwidget.cpp  paintwidget.h  projekt.README.md  shape.cpp  shape.h  square.cpp  square.h
